--- a/index.html
+++ b/index.html
@@ -88,13 +88,11 @@
                 supporting the youth, and spreading hope through our ministry and football team.
               </p>
 
-              <div class="hero-buttons">
-                <a href="#about" class="btn btn-primary me-0 me-sm-2 mx-1">Learn More</a>
-                <a href="https://www.facebook.com/nabieujoseph/videos/1056454929460204" class="btn btn-link mt-2 mt-sm-0 glightbox">
-                  <i class="bi bi-play-circle me-1"></i>
-                  Watch Our Story
-                </a>
-              </div>
+              <a href="https://www.facebook.com/nabieujoseph/videos/1056454929460204" class="btn btn-link mt-2 mt-sm-0 glightbox" target="_blank">
+                <i class="bi bi-play-circle me-1"></i>
+                Watch Our Story
+              </a>
+
             </div>
           </div>
 
